# termosc

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  termosc.c
.deps/: bgcolor.Po  termosc.Po
autom4te.cache/: output.2  output.3  requests  traces.0  traces.1  traces.3  traces.4
src/: termosc.c
