#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([termosc], [0.1], [ryan.gambord@oregonstate.edu])
AC_CONFIG_SRCDIR([termosc.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile]) 

AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([termios.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
